argocd/infra/gateway/parts/gateway-eoepca-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eoepca-public
  namespace: gateway
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      #--------------------------------
      # Patch the node port definitions
      #--------------------------------
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: eoepca-public
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: TLS
      port: 443
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
