argocd/infra/gateway/parts/route-apisix.yaml
#-------------------------------------------------------------------------------
# APISIX - No hostname rules, so acts as Default Route
#-------------------------------------------------------------------------------

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apisix
  namespace: ingress-apisix
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  parentRefs:
    - name: eoepca-public
      namespace: gateway
  rules:
    - backendRefs:
        - name: apisix-gateway
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: apisix
  namespace: ingress-apisix
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  parentRefs:
    - name: eoepca-public
      namespace: gateway
  rules:
    - backendRefs:
        - name: apisix-gateway
          port: 443
